test/seq/cmdlists/invalid_ttl1_2.err
SyntaxError: Expecting `=` before TTL value
Line: 3, Column: 7
ttl(2)
      ^
